--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
 
 <body>
   <h2>Parkplatz</h2>
+  <img src="/img/audi.jpg" alt="Audi" height="80" width="150">
   <table id="matrixTB">
     <tr>
       <td id="d1">0</td>
@@ -158,14 +159,34 @@
 
     socket.on('occupied', function (data) {
       console.log(data.val);
-      $("#d57").html
-      if (data.val == 1) {
+      //$("#d57").html
+      for (var i = 1; i < 65; i++) {
+        $("#d" + i).html('0');
+        $("#d" + i).css("background-color", "#e2e2e0");
+      }
+      if ((data.val[0] == 1) && (data.val[1] == 1)) {
         $("#d57").css("background-color", "yellow");
         $("#d57").html("1");
-      } else {
-        console.log('one');
+        $("#d58").css("background-color", "yellow");
+        $("#d58").html("1");
+      }
+      else if (data.val[0] == 1) {
+        $("#d57").css("background-color", "yellow");
+        $("#d57").html("1");
+        $("#d58").css("background-color", "#e2e2e0");
+        $("#d58").html("0");
+      }
+      else if (data.val[1] == 1) {
         $("#d57").css("background-color", "#e2e2e0");
         $("#d57").html("0");
+        $("#d58").css("background-color", "yellow");
+        $("#d58").html("1");
+      }
+      else {
+        $("#d57").css("background-color", "#e2e2e0");
+        $("#d57").html("0");
+        $("#d58").css("background-color", "#e2e2e0");
+        $("#d58").html("0");
       }
     });
 
