Add picture and change README.md

--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,8 @@
 </head>
 
 <body>
-  <h2>Parkplatz</h2>
-  <img src="/img/audi.jpg" alt="Audi" height="80" width="150">
+  <h2>Parkid</h2>
+  <img src="/img/audi.jpg" alt="Audi" height="100" width="200">
   <table id="matrixTB">
     <tr>
       <td id="d1">0</td>
