Add park function color, update photo in README.md

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Parkid Demo</title>
+  <title>P.I.D Demo</title>
   <style type="text/css">
     head {
       text-align: center;
@@ -13,6 +13,7 @@
       cursor: pointer;
       width: 200px;
       height: 200px;
+      border-collapse: separate;
       border-width: 0;
       border-spacing: 0;
     }
@@ -20,7 +21,16 @@
     #matrixTB td {
       padding: 0;
       height: 10px;
-      width: 10px;
+      width: 15px;
+      background-color: #e2e2e0;
+      border: 1px solid #cccccc;
+      text-align: center;
+    }
+
+    #matrixTB tr {
+      padding: 0;
+      height: 10px;
+      width: 15px;
       background-color: #e2e2e0;
       border: 1px solid #cccccc;
       text-align: center;
@@ -69,97 +79,191 @@
       display: inline-block;
 
     }
+
+    #d1 {
+      border: 1px solid blue !important;
+    }
+
+    #d4 {
+      border: 1px solid yellow !important;
+    }
+
+    #d24 {
+      border: 1px solid white !important;
+    }
+
+    #d25 {
+      border-bottom: 1px solid greenyellow !important;
+    }
+
+    #d26 {
+      border-bottom: 1px solid greenyellow !important;
+    }
+
+    #d27 {
+      border-bottom: 1px solid greenyellow !important;
+    }
+
+    #d28 {
+      border-bottom: 1px solid greenyellow !important;
+    }
+
+    #d32 {
+      border: 1px solid white !important;
+    }
+
+    #d33 {
+      border: 1px solid yellow !important;
+    }
+
+    #d34 {
+      border: 1px solid red !important;
+    }
+
+    #d35 {
+      border: 1px solid red !important;
+    }
+
+    #d37 {
+      border-left: 1px solid greenyellow !important;
+    }
+
+    #d40 {
+      border: 1px solid white !important;
+    }
+
+    #d41 {
+      border-top: 1px solid greenyellow !important;
+    }
+
+    #d42 {
+      border-top: 1px solid greenyellow !important;
+    }
+
+    #d43 {
+      border-top: 1px solid greenyellow !important;
+    }
+
+    #d44 {
+      border-top: 1px solid greenyellow !important;
+    }
+
+    #d48 {
+      border: 1px solid blue !important;
+    }
+
+    #d56 {
+      border: 1px solid white !important;
+    }
+
+    #d57 {
+      border: 1px solid white !important;
+    }
+
+
+    #d58 {
+      border: 1px solid white !important;
+    }
+
+
+    #d59 {
+      border: 1px solid red !important;
+    }
+
+    #d60 {
+      border: 1px solid purple !important;
+    }
   </style>
 </head>
 
 <body>
   <div class="header">
     <center>
-      <h2>Parkid Demo</h2>
+      <h2>Welcome to AAZ</h2>
     </center>
   </div>
   <div class="row">
     <div class="column">
-      <table id="matrixTB" align="center" width="400" hight="400">
+      <table id="matrixTB" align="center" width="400px" hight="400px">
         <tr>
-          <td id="d1">0</td>
-          <td id="d2">0</td>
-          <td id="d3">0</td>
-          <td id="d4">0</td>
-          <td id="d5">0</td>
-          <td id="d6">0</td>
-          <td id="d7">0</td>
-          <td id="d8">0</td>
+          <td id="d1">14</td>
+          <td id="d2">&nbsp;</td>
+          <td id="d3">&nbsp;</td>
+          <td id="d4">15</td>
+          <td id="d5">&nbsp;</td>
+          <td id="d6">&nbsp;</td>
+          <td id="d7">&nbsp;</td>
+          <td id="d8">&nbsp;</td>
         </tr>
         <tr>
-          <td id="d9">0</td>
-          <td id="d10">0</td>
-          <td id="d11">0</td>
-          <td id="d12">0</td>
-          <td id="d13">0</td>
-          <td id="d14">0</td>
-          <td id="d15">0</td>
-          <td id="d16">0</td>
+          <td id="d9">&nbsp;</td>
+          <td id="d10">&nbsp;</td>
+          <td id="d11">&nbsp;</td>
+          <td id="d12">&nbsp;</td>
+          <td id="d13">&nbsp;</td>
+          <td id="d14">&nbsp;</td>
+          <td id="d15">&nbsp;</td>
+          <td id="d16">&nbsp;</td>
         </tr>
         <tr>
-          <td id="d17">0</td>
-          <td id="d18">0</td>
-          <td id="d19">0</td>
-          <td id="d20">0</td>
-          <td id="d21">0</td>
-          <td id="d22">0</td>
-          <td id="d23">0</td>
-          <td id="d24">0</td>
+          <td id="d17">&nbsp;</td>
+          <td id="d18">&nbsp;</td>
+          <td id="d19">&nbsp;</td>
+          <td id="d20">&nbsp;</td>
+          <td id="d21">&nbsp;</td>
+          <td id="d22">&nbsp;</td>
+          <td id="d23">&nbsp;</td>
+          <td id="d24">9</td>
         </tr>
         <tr>
-          <td id="d25">0</td>
-          <td id="d26">0</td>
-          <td id="d27">0</td>
-          <td id="d28">0</td>
-          <td id="d29">0</td>
-          <td id="d30">0</td>
-          <td id="d31">0</td>
-          <td id="d32">0</td>
+          <td id="d25">&nbsp;</td>
+          <td id="d26">&nbsp;</td>
+          <td id="d27">&nbsp;</td>
+          <td id="d28">&nbsp;</td>
+          <td id="d29">&nbsp;</td>
+          <td id="d30">&nbsp;</td>
+          <td id="d31">&nbsp;</td>
+          <td id="d32">8</td>
         </tr>
         <tr>
-          <td id="d33">0</td>
-          <td id="d34">0</td>
-          <td id="d35">0</td>
-          <td id="d36">0</td>
-          <td id="d37">0</td>
-          <td id="d38">0</td>
-          <td id="d39">0</td>
-          <td id="d40">0</td>
+          <td id="d33">10</td>
+          <td id="d34">11</td>
+          <td id="d35">12</td>
+          <td id="d36">13</td>
+          <td id="d37">&nbsp;</td>
+          <td id="d38">&nbsp;</td>
+          <td id="d39">&nbsp;</td>
+          <td id="d40">7</td>
         </tr>
         <tr>
-          <td id="d41">0</td>
-          <td id="d42">0</td>
-          <td id="d43">0</td>
-          <td id="d44">0</td>
-          <td id="d45">0</td>
-          <td id="d46">0</td>
-          <td id="d47">0</td>
-          <td id="d48">0</td>
+          <td id="d41">&nbsp;</td>
+          <td id="d42">&nbsp;</td>
+          <td id="d43">&nbsp;</td>
+          <td id="d44">&nbsp;</td>
+          <td id="d45">&nbsp;</td>
+          <td id="d46">&nbsp;</td>
+          <td id="d47">&nbsp;</td>
+          <td id="d48">6</td>
         </tr>
         <tr>
-          <td id="d49">0</td>
-          <td id="d50">0</td>
-          <td id="d51">0</td>
-          <td id="d52">0</td>
-          <td id="d53">0</td>
-          <td id="d54">0</td>
-          <td id="d55">0</td>
-          <td id="d56">0</td>
+          <td id="d49">&nbsp;</td>
+          <td id="d50">&nbsp;</td>
+          <td id="d51">&nbsp;</td>
+          <td id="d52">&nbsp;</td>
+          <td id="d53">&nbsp;</td>
+          <td id="d54">&nbsp;</td>
+          <td id="d55">&nbsp;</td>
+          <td id="d56">5</td>
         </tr>
         <tr>
-          <td id="d57">0</td>
-          <td id="d58">0</td>
-          <td id="d59">0</td>
-          <td id="d60">0</td>
-          <td id="d61">0</td>
-          <td id="d62">0</td>
-          <td id="d63">0</td>
-          <td id="d64">0</td>
+          <td id="d57">1</td>
+          <td id="d58">2</td>
+          <td id="d59">3</td>
+          <td id="d60">4</td>
+          <td id="d61">&nbsp;</td>
+          <td id="d62">&nbsp;</td>
+          <td id="d63">&nbsp;</td>
+          <td id="d64">&nbsp;</td>
         </tr>
       </table>
     </div>
@@ -182,6 +286,26 @@
     var press = false;
     var socket = io.connect();
     var m_array = [];
+
+    const parkspace_to_grid = {
+      1: 56,
+      2: 57,
+      3: 58,
+      4: 59,
+      5: 55,
+      6: 47,
+      7: 39,
+      8: 31,
+      9: 23,
+      10: 32,
+      11: 33,
+      12: 34,
+      13: 35,
+      14: 0,
+      15: 3
+    };
+
+    const grid_to_parkspace = swap(parkspace_to_grid);
 
 
     $(document).mousedown(function () {
@@ -209,8 +333,17 @@
       var index = 0;
 
       for (var i = 1; i < 65; i++) {
-        $("#d" + i).html('0');
-        $("#d" + i).css("background-color", "#e2e2e0");
+        var temp;
+        if (Object.values(parkspace_to_grid).includes(i - 1)) {
+          temp = Object.keys(parkspace_to_grid).find(key => parkspace_to_grid[key] === (i - 1));
+          $("#d" + i).html(String(temp));
+          $("#d" + i).css("background-color", "#e2e2e0");
+        }
+        else {
+
+          $("#d" + i).html('&nbsp;');
+          $("#d" + i).css("background-color", "#e2e2e0");
+        }
       }
 
       m_array = [0, 0, 0, 0, 0, 0, 0, 0];
@@ -221,12 +354,21 @@
       var value = data["occupied"][56];
       var ins = data["instruction"];
       var show_instruction = "";
-      console.log(value);
+      //console.log(value);
       //$("#d57").html
       for (var i = 1; i < 65; i++) {
-        $("#d" + i).html('0');
-        $("#d" + i).css("background-color", "#e2e2e0");
+        var temp;
+        if ((i - 1) in grid_to_parkspace) {
+          $("#d" + i).html(String(grid_to_parkspace[i - 1]));
+          $("#d" + i).css("background-color", "#e2e2e0");
+        }
+        else {
+          $("#d" + i).html('&nbsp;');
+          $("#d" + i).css("background-color", "#e2e2e0");
+        }
       }
+
+
       if (value == 1) {
         $("#d57").css("background-color", "yellow");
         $("#d57").html("1");
@@ -255,6 +397,14 @@
         me.css("background-color", "#e2e2e0");
         me.html("0");
       }
+    }
+
+    function swap(json) {
+      var ret = {};
+      for (var key in json) {
+        ret[json[key]] = key;
+      }
+      return ret;
     }
 
     function matrixVal() {
