Project demo finished, start to clear the code

--- a/www/index.html
+++ b/www/index.html
@@ -416,14 +416,10 @@
         }
       }
 
-      send2Server();
+      //send2Server();
     }
 
-    function send2Server() {
-      socket.emit('live_matrix', {
-        'm': m_array
-      });
-    }
+
   </script>
 </body>
 
